# ThisPrisonerDoesNotExist

./: .gitignore  .pre-commit-config.yaml  README.md  downloadDataset.py  fitModel.py  main.py  noiseScheduler.py  optimizer.py  pathsLoader.py  prisonersDataset.py  prisonersModel.py  prisonersi.gitignore  pyproject.toml  trainingConfig.py  unzip.py
data distribution/: dataDistribution.ipynb
data/text data/: Photo.txt
notebook/: prisonerGenerator.ipynb
notebooks/data distribution/: dataDistribution.ipynb
scripts/: downloadDataset.py  main.py
src/: fitModel.py  noiseScheduler.py  optimizer.py  trainingConfig.py
thisprisonerdoesnotexist/scripts/: downloadDataset.py  main.py
thisprisonerdoesnotexist/src/: fitModel.py  noiseScheduler.py  optimizer.py  trainingConfig.py
