[tool.poetry]
name = "thisprisonerdoesnotexist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.7.1"
jupyter = "^1.0.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
numpy = "<2"
diffusers = "^0.29.0"
accelerate = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
